# translate_bot

./: Cargo.toml  Procfile
src/: main.rs  translate.rs
